--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,20 +10,17 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
+      - name: checkout code
+        uses: actions/checkout@v2
+
       - name: Create tag
         run: echo "tag=$(date +%s)" >> $GITHUB_ENV
 
-      - name: Clone repository
-        uses: actions/checkout@v2
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+      - name: install buildx
+        id: buildx
+        uses: crazy-max/ghaction-docker-buildx@v1
         with:
-          image: tonistiigi/binfmt:latest
-          platforms: arm64,arm
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+          version: latest
 
       - name: Login to DockerHub
         uses: docker/login-action@v1 
@@ -31,10 +28,9 @@ jobs:
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          platforms: linux/amd64,linux/arm64v8,linux/arm/v7
-          push: true
-          tags: ${{ secrets.DOCKER_USER }}/msmtp:${{env.tag}}
+      - name: build and push
+        run: |
+          docker buildx build \
+            --push \
+            --tag ${{secrets.DOCKER_USER}}/msmtp:${{env.tag}} \
+            --platform linux/amd64,linux/arm/v7,linux/arm64 .
