--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -36,3 +36,10 @@ jobs:
             --tag latest \
             --tag ${{secrets.DOCKER_USER}}/msmtp:${{env.tag}} \
             --platform linux/amd64,linux/arm/v7,linux/arm64 .
+
+      - name: Docker Hub Description
+        uses: peter-evans/dockerhub-description@v2
+        with:
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PASSWORD_ }}
+          repository: shantysocial/msmtp
