--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,15 +31,7 @@ jobs:
 
       - name: build and push
         run: |
-          docker buildx build -f Dockerfile \
+          docker buildx build \
             --push \
-            --tag ${{secrets.DOCKER_USER}}/msmtp:latest \
             --tag ${{secrets.DOCKER_USER}}/msmtp:${{env.tag}} \
             --platform linux/amd64,linux/arm/v7,linux/arm64 .
-
-      - name: Docker Hub Description
-        uses: peter-evans/dockerhub-description@v2
-        with:
-          username: ${{ secrets.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_PASSWORD_ }}
-          repository: shantysocial/msmtp
